scripts/nullaway/wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8.txt
../wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/GameObjects/Lantern.java:36: error: [NullAway] dereferenced expression position is @Nullable
        int rowMin = Math.max(0, position.getRow() - lightRadius);
                                         ^
    (see http://t.uber.com/nullaway )
../wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/AbstractField.java:54: error: [NullAway] dereferenced expression pos is @Nullable
        field[pos.getRow()][pos.getColumn()] = obj;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/AbstractField.java:73: error: [NullAway] dereferenced expression pos is @Nullable
        return getObject(pos.getRow(), pos.getColumn());
                            ^
    (see http://t.uber.com/nullaway )
../wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/AbstractField.java:107: error: [NullAway] dereferenced expression from is @Nullable
        positions.add(from.incColumn());
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/Position.java:28: error: [NullAway] dereferenced expression pos is @Nullable
        row = pos.row;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/Position.java:82: error: [NullAway] dereferenced expression pos is @Nullable
        return (row == pos.row && column == pos.column);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/PathHelper.java:39: error: [NullAway] dereferenced expression pos is @Nullable
        while (!pos.equals(from)) {
                   ^
    (see http://t.uber.com/nullaway )
../wpi/urlae87f3aacb_kamanov_Drunkard_tgz-pJ8-ru_spbau_amanov_drunkard_ApplicationJ8/src/ru/spbau/amanov/drunkard/HexagonalField.java:16: error: [NullAway] dereferenced expression from is @Nullable
        if (from.getRow() % 2 == 0) {
                ^
    (see http://t.uber.com/nullaway )
8 errors
